crates/elenchus-parser/tests/snapshots/errors__list_premise_needs_two_atoms.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(r#\"\n        PREMISE modes:\n            EXCLUSIVE\n                Sys mode idle\n        CHECK Sys\n        \"#)"
---
RESULT: 1 syntax error

[1/1] line 5, col 1
   |         CHECK Sys
   | ^^^^^^^^^^^^^^^^^
   problem : a list premise needs at least two atoms
